Updated keybindings and styling

--- a/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
@@ -37,6 +37,9 @@ bind = $mainMod, X, exec, ~/.config/eww/powermenu/launch.sh
 # Lock screen
 bind = $mainMod, L, exec, ~/.config/hypr/scripts/lock.sh
 
+# IBus engine switcher (for sgpt)
+bind = $mainMod CTRL, Space, exec, ibus engine shin
+
 # ============================================================================
 # Window Management
 # ============================================================================
@@ -63,6 +66,21 @@ bind = $mainMod, J, togglesplit
 
 # Pin window (keep on all workspaces)
 bind = $mainMod SHIFT, P, pin
+
+# Focus mode toggle (floating <-> tiled)
+bind = $mainMod SHIFT, Space, focuscurrentorlast
+
+# Smart floating (float + center + resize) - equivalent to i3's smart-float.sh
+bind = $mainMod SHIFT, F, exec, hyprctl dispatch togglefloating && hyprctl dispatch centerwindow
+
+# Move window to center
+bind = $mainMod CTRL, C, centerwindow
+
+# Focus parent (using changegroupactive as alternative)
+bind = $mainMod, P, changegroupactive, f
+
+# Focus child
+bind = $mainMod, C, changegroupactive, b
 
 # ============================================================================
 # Focus Movement (Vim-like)
