style: Refactor Hyprland configuration and improve autostart scripts

--- a/home/dot_config/hypr/hyprland.conf
+++ b/home/dot_config/hypr/hyprland.conf
@@ -24,11 +24,11 @@ source = ~/.config/hypr/hyprland.conf.d/colors.conf
 # ============================================================================
 
 general {
-    # Gaps between windows (matching i3 gaps inner 12)
+    # Gaps between windows
     gaps_in = 12
     gaps_out = 18
 
-    # Border settings (matching i3 border pixel 2)
+    # Border settings
     border_size = 2
 
     # Border colors (will be overridden by colors.conf from smart-colors)
@@ -113,7 +113,7 @@ dwindle {
     force_split = 0
 
     # Smart split
-    smart_split = false
+    smart_split = true
 
     # Smart resizing
     smart_resizing = true
