--- a/home/dot_config/hypr/hyprland.conf.d/autostart.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/autostart.conf
@@ -41,8 +41,8 @@ exec-once = xrdb -merge ~/.Xresources
 # Wallpaper daemon
 exec-once = hyprpaper
 
-# Apply wallpaper and colors (dots-wal-reload handles pywal + smart-colors)
-exec-once = ~/.local/bin/dots wal-reload
+# Apply wallpaper
+exec-once = ~/.local/bin/dots-hyprpaper-set
 
 # Cursor theme
 exec-once = hyprctl setcursor Adwaita 24
@@ -75,7 +75,7 @@ exec-once = ibus-daemon -drx
 # exec-once = greenclip daemon
 
 # Night mode auto-management
-# exec-once = ~/.local/bin/dots night-mode auto
+# exec-once = ~/.local/bin/dots-night-mode auto
 
 # ============================================================================
 # Rice-specific Autostart
