--- a/home/dot_config/hypr/hyprland.conf.d/environment.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/environment.conf
@@ -28,11 +28,11 @@ env = MOZ_ENABLE_WAYLAND,1
 env = MOZ_DISABLE_RDD_SANDBOX,1
 
 # NVIDIA (uncomment if using NVIDIA GPU)
-# env = LIBVA_DRIVER_NAME,nvidia
-# env = XDG_SESSION_TYPE,wayland
-# env = GBM_BACKEND,nvidia-drm
-# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-# env = WLR_NO_HARDWARE_CURSORS,1
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = WLR_NO_HARDWARE_CURSORS,1
 
 # Cursor
 env = XCURSOR_SIZE,24
