--- a/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
@@ -13,8 +13,8 @@ $mainMod = SUPER
 # ============================================================================
 
 # Terminal
-bind = $mainMod, Return, exec, kitty
-bind = $mainMod, T, exec, kitty
+bind = $mainMod, Return, exec, exo-open --launch TerminalEmulator
+bind = $mainMod, T, exec, exo-open --launch TerminalEmulator
 
 # Application launcher
 bind = CTRL, Space, exec, ~/.local/bin/dots rofi-run -r
@@ -23,7 +23,7 @@ bind = CTRL, Space, exec, ~/.local/bin/dots rofi-run -r
 bind = $mainMod, V, exec, ~/.local/bin/dots rofi-run -c
 
 # File manager
-bind = $mainMod, F, exec, thunar
+bind = $mainMod, F, exec, exo-open --launch FileManager
 
 # Web browser
 bind = $mainMod, W, exec, exo-open --launch WebBrowser
