--- a/home/dot_config/hypr/hyprland.conf.d/monitors.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/monitors.conf
@@ -14,8 +14,8 @@
 monitor=,preferred,auto,1
 
 # Disable laptop screen when lid is closed
-bindl=,switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
-bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, preferred, auto, 1"
+# bindl=,switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
+# bindl=,switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, preferred, auto, 1"
 
 # Example multi-monitor setups (uncomment and modify as needed):
 # monitor=eDP-1,1920x1080@60,0x0,1          # Laptop screen
