Add configuration files and scripts for default applications management
- Created handlr configuration file to manage application handlers.
- Updated window rules for Hyprland to center specific application windows.
- Modified jgmenu configuration for improved appearance and functionality.
- Removed deprecated private GitHub access token notification template.
- Implemented a new script for managing default applications using handlr.
- Refactored file manager launcher to use exo-open for better integration.
- Enhanced jgmenu launcher to support smart color integration.
- Added default applications option to settings GUI for easier access.

--- a/home/dot_config/hypr/hyprland.conf.d/window-rules.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/window-rules.conf
@@ -30,29 +30,41 @@
 
 # System utilities
 windowrulev2 = float, class:^(pavucontrol)$
+windowrulev2 = center, class:^(pavucontrol)$
 windowrulev2 = float, class:^(blueman-manager)$
+windowrulev2 = center, class:^(blueman-manager)$
 windowrulev2 = float, class:^(nm-connection-editor)$
+windowrulev2 = center, class:^(nm-connection-editor)$
 windowrulev2 = float, class:^(gnome-calculator)$
+windowrulev2 = center, class:^(gnome-calculator)$
 
 # Community GUI tools (new)
 windowrulev2 = float, class:^(copyq)$
 windowrulev2 = float, class:^(fuzzel)$
 windowrulev2 = float, class:^(wofi)$
 windowrulev2 = float, class:^(nwg-look)$
+windowrulev2 = center, class:^(nwg-look)$
 windowrulev2 = float, class:^(nwg-displays)$
+windowrulev2 = center, class:^(nwg-displays)$
 windowrulev2 = float, class:^(nwg-bar)$
 windowrulev2 = float, class:^(nwg-drawer)$
 windowrulev2 = float, class:^(auto-cpufreq-gtk)$
+windowrulev2 = center, class:^(auto-cpufreq-gtk)$
 windowrulev2 = float, title:^(wlogout)$
 
 # File managers (dialogs)
 windowrulev2 = float, title:^(File Operation Progress)$
+windowrulev2 = center, title:^(File Operation Progress)$
 windowrulev2 = float, title:^(Confirm to replace files)$
+windowrulev2 = center, title:^(Confirm to replace files)$
 windowrulev2 = float, class:^(thunar)$, title:^(Bulk Rename)$
+windowrulev2 = center, class:^(thunar)$, title:^(Bulk Rename)$
 
 # System monitors
 windowrulev2 = float, class:^(btop)$
+windowrulev2 = center, class:^(btop)$
 windowrulev2 = float, class:^(htop)$
+windowrulev2 = center, class:^(htop)$
 
 # Picture-in-Picture
 windowrulev2 = float, title:^(Picture-in-Picture)$
@@ -64,6 +76,8 @@ windowrulev2 = move 72% 72%, title:^(Picture-in-Picture)$
 windowrulev2 = float, class:^(Rofi)$
 windowrulev2 = stayfocused, class:^(Rofi)$
 windowrulev2 = animation slide, class:^(Rofi)$
+windowrulev2 = noshadow, class:^(Rofi)$
+windowrulev2 = rounding 0, class:^(Rofi)$
 
 # Fuzzel/Wofi launchers
 windowrulev2 = stayfocused, class:^(fuzzel)$
@@ -84,17 +98,17 @@ windowrulev2 = animation popin, class:^(nwg-bar)$
 # wlogout power menu
 windowrulev2 = center, title:^(wlogout)$
 windowrulev2 = stayfocused, title:^(wlogout)$
-windowrulev2 = animation popin, title:^(wlogout)$
-
 # EWW Widgets
 windowrulev2 = float, class:^(eww)$
 windowrulev2 = nofocus, class:^(eww)$, title:^(eww-background)$
+windowrulev2 = noshadow, class:^(eww)$
+windowrulev2 = rounding 0, class:^(eww)$
 
 # Notification daemon
 windowrulev2 = float, class:^(mako)$
 windowrulev2 = nofocus, class:^(mako)$
-
-# ============================================================================
+windowrulev2 = noshadow, class:^(mako)$
+windowrulev2 = rounding 0, class:^(mako)$
 # Opacity Rules
 # ============================================================================
 
@@ -148,8 +162,13 @@ windowrulev2 = workspace 4 silent, class:^(Spotify)$
 # Size and Position Rules
 # ============================================================================
 
-# Center floating windows
-windowrulev2 = center, floating:1
+# JGMenu - don't center, it handles positioning itself
+windowrulev2 = noborder, class:^(jgmenu)$
+windowrulev2 = noanim, class:^(jgmenu)$
+
+# Center floating windows - DISABLED for jgmenu and eww compatibility
+# Instead, specific windows that need centering are centered individually below
+# windowrulev2 = center, floating:1
 
 # Specific application sizes
 windowrulev2 = size 60% 70%, class:^(pavucontrol)$
