refactor: remove obsolete .cursorrules file and streamline Hyprland documentation

--- a/home/dot_config/hypr/hyprland.conf
+++ b/home/dot_config/hypr/hyprland.conf
@@ -20,7 +20,7 @@ source = ~/.config/hypr/hyprland.conf.d/colors.conf
 # ============================================================================
 # General Settings
 # ============================================================================
-# Layout and spacing following i3 gaps configuration pattern
+# Window layout and spacing configuration
 # ============================================================================
 
 general {
@@ -54,14 +54,11 @@ general {
 # ============================================================================
 # Decoration Settings
 # ============================================================================
-# Matching visual consistency with Picom configuration:
-# - Corner radius: 12px (same as picom.conf)
-# - Blur: Similar to picom's dual_kawase strength 6
-# - Shadow: Matching picom's shadow settings (radius 12, offset -12)
+# Visual styling: rounded corners, blur effects, and shadows
 # ============================================================================
 
 decoration {
-    # Rounded corners (matching picom.conf corner-radius = 12)
+    # Rounded corners for polished appearance
     rounding = 12
 
     # Opacity settings
@@ -69,7 +66,7 @@ decoration {
     inactive_opacity = 0.95
     fullscreen_opacity = 1.0
 
-    # Blur settings (matching picom dual_kawase strength 6)
+    # Blur settings (dual kawase blur)
     blur {
         enabled = true
         size = 8
@@ -84,8 +81,7 @@ decoration {
         vibrancy_darkness = 0.0
     }
 
-    # Drop shadow (matching picom shadow settings)
-    # Picom: radius=12, offset=-12, opacity=0.18
+    # Drop shadow for depth perception
     shadow {
         enabled = true
         range = 12
