feat: add vertical-left Waybar profile for minimalist workflows
- Introduced a new Waybar profile script for a vertical left sidebar.
- Removed obsolete battery status and benchmark GUI tools scripts.
- Updated clipboard manager and launcher scripts with copyright notices.
- Enhanced jgmenu script with configurable positioning and auto-detection of Waybar position.
- Removed legacy rofi-run script in favor of newer wrappers.
- Updated various scripts to include copyright information and licensing.
- Configured existing rice profiles to use the new vertical-left Waybar profile.

--- a/home/dot_config/waybar/configs/default/config-top.json
+++ b/home/dot_config/waybar/configs/default/config-top.json
@@ -68,12 +68,12 @@
     "custom/night-mode",
     "custom/github",
     "custom/performance-profile",
-    "custom/battery",
+    "battery",
     "tray"
   ],
 
   "custom/jgmenu": {
-    "format": "",
+    "format": "󰣇",
     "tooltip": true,
     "tooltip-format": "Open Jgmenu",
     "on-click": "dots-jgmenu",
@@ -125,12 +125,17 @@
     "on-click": "~/.local/bin/dots-performance-mode --gui"
   },
 
-  "custom/battery": {
-    "format": "{}",
-    "exec": "~/.config/waybar/scripts/battery-status",
+  "battery": {
     "interval": 30,
-    "tooltip": true,
-    "tooltip-format": "Battery status; notifications via poweralertd or wrapper"
+    "states": {
+      "warning": 30,
+      "critical": 15
+    },
+    "format": "{icon} {capacity}%",
+    "format-charging": "󰂄 {capacity}%",
+    "format-plugged": "󰚥 {capacity}%",
+    "format-icons": ["󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
+    "tooltip-format": "Battery: {capacity}%\n{timeTo}"
   },
 
   "custom/weather": {
