--- a/home/dot_config/waybar/configs/default/config-bottom.json
+++ b/home/dot_config/waybar/configs/default/config-bottom.json
@@ -229,7 +229,8 @@
     "states": {
       "warning": 70,
       "critical": 90
-    }
+    },
+    "on-click": "kitty --class=floating -e btop"
   },
 
   "cpu": {
@@ -239,7 +240,8 @@
     "states": {
       "warning": 70,
       "critical": 90
-    }
+    },
+    "on-click": "kitty --class=floating -e btop"
   },
 
   "temperature": {
@@ -249,7 +251,8 @@
     "critical-threshold": 80,
     "format": "{icon} {temperatureC}°C",
     "format-icons": ["󰔏", "󰔏", "󰸁"],
-    "tooltip-format": "Temperature: {temperatureC}°C"
+    "tooltip-format": "Temperature: {temperatureC}°C",
+    "on-click": "kitty --class=floating -e btop"
   },
 
   "custom/separator": {
