refactor: adjust margin and enhance workspace window formatting in Waybar config

--- a/home/dot_config/waybar/configs/vertical-left/config.json
+++ b/home/dot_config/waybar/configs/vertical-left/config.json
@@ -4,7 +4,7 @@
   "width": 48,
   "spacing": 0,
   "margin-top": 8,
-  "margin-left": 6,
+  "margin-left": 8,
   "margin-bottom": 8,
   "margin-right": 0,
 
@@ -38,18 +38,106 @@
   },
 
   "hyprland/workspaces": {
-    "format": "{icon}",
-    "format-icons": {
-      "1": "一",
-      "2": "二",
-      "3": "三",
-      "4": "四",
-      "5": "五",
-      "6": "六",
-      "7": "七",
-      "8": "八",
-      "9": "九",
-      "10": "十"
+    "format": "{windows}",
+    "format-window-separator": "\n",
+    "window-rewrite-default": "󰧞",
+    "window-rewrite": {
+      "class<kitty>": "󰞷",
+      "class<Alacritty>": "󰞷",
+      "class<foot>": "󰞷",
+      "class<wezterm>": "󰞷",
+      "class<terminator>": "󰞷",
+      "class<gnome-terminal>": "󰞷",
+
+      "class<brave-browser>": "󰖟",
+      "class<firefox>": "󰈹",
+      "class<Firefox>": "󰈹",
+      "class<chromium>": "󰊯",
+      "class<Google-chrome>": "󰊯",
+      "class<vivaldi-stable>": "󰖟",
+      "class<opera>": "󰬺",
+      "class<microsoft-edge>": "󰇩",
+
+      "class<Code>": "󰨞",
+      "class<code>": "󰨞",
+      "class<nvim>": "",
+      "class<vim>": "",
+      "class<emacs>": "",
+      "class<sublime_text>": "󰅳",
+      "class<atom>": "",
+      "class<WebStorm>": "󱃖",
+      "class<IntelliJ IDEA>": "󱃖",
+      "class<PyCharm>": "󱃖",
+
+      "class<Slack>": "󰍩",
+      "class<discord>": "󰙯",
+      "class<telegram>": "",
+      "class<whatsapp>": "󰖣",
+      "class<teams>": "󰊻",
+      "class<zoom>": "󰊽",
+      "class<signal>": "󰭹",
+
+      "class<spotify>": "󰓇",
+      "class<Spotify>": "󰓇",
+      "class<vlc>": "󰕼",
+      "class<mpv>": "󰐹",
+      "class<rhythmbox>": "󰓃",
+      "class<audacity>": "󰈣",
+      "class<obs>": "󰐌",
+
+      "class<thunar>": "󰉋",
+      "class<Thunar>": "󰉋",
+      "class<nautilus>": "󰉋",
+      "class<dolphin>": "󰉋",
+      "class<pcmanfm>": "󰉋",
+      "class<nemo>": "󰉋",
+      "class<ranger>": "󰉋",
+
+      "class<obsidian>": "󱓷",
+      "class<notion>": "󰈙",
+      "class<logseq>": "󰗀",
+      "class<typora>": "󰧮",
+      "class<marktext>": "󰗞",
+      "class<zettlr>": "󰠮",
+
+      "class<gimp>": "󰵉",
+      "class<inkscape>": "󰜬",
+      "class<krita>": "󰚻",
+      "class<blender>": "󰂫",
+      "class<darktable>": "󰄄",
+      "class<rawtherapee>": "󰄄",
+      "class<figma-linux>": "󰤱",
+      "class<aseprite>": "󰏘",
+
+      "class<steam>": "󰓓",
+      "class<lutris>": "󰺵",
+      "class<heroic>": "󰊴",
+      "class<minecraft>": "󰍳",
+      "class<gamemode>": "󰊴",
+
+      "class<virtualbox>": "󰢔",
+      "class<virt-manager>": "󰢔",
+      "class<vmware>": "󰢔",
+      "class<docker>": "󰡨",
+      "class<qemu>": "󰢔",
+
+      "class<libreoffice>": "󰈙",
+      "class<libreoffice-writer>": "󰈙",
+      "class<libreoffice-calc>": "󰈛",
+      "class<libreoffice-impress>": "󰈧",
+      "class<evince>": "󰈦",
+      "class<okular>": "󰈦",
+      "class<zathura>": "󰈦",
+
+      "class<thunderbird>": "󰇮",
+      "class<evolution>": "󰇮",
+      "class<mailspring>": "󰇮",
+
+      "class<filezilla>": "󰒍",
+      "class<transmission>": "󰶘",
+      "class<qbittorrent>": "󰶘",
+      "class<bitwarden>": "󰌾",
+      "class<keepassxc>": "󰌾"
     },
     "on-click": "activate",
     "all-outputs": true,
