refactor: update power menu keybinding and add interactive gaps management

--- a/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
@@ -31,11 +31,14 @@ bind = $mainMod, W, exec, exo-open --launch WebBrowser
 # Dashboard (EWW)
 bind = $mainMod, D, exec, ~/.config/eww/dashboard/launch.sh
 
-# Power menu (EWW)
-bind = $mainMod, X, exec, ~/.local/bin/dots-power-menu
+# Power menu
+bind = $mainMod, X, exec, ~/.local/bin/dots-power-menu --rofi
 
 # Lock screen
 bind = $mainMod, L, exec, ~/.config/hypr/scripts/lock.sh
+
+# Interactive gaps management (like i3-gaps)
+bind = $mainMod SHIFT, G, exec, ~/.config/hypr/scripts/gaps-interactive.sh
 
 # IBus engine switcher (for sgpt)
 bind = $mainMod CTRL, Space, exec, ibus engine shin
@@ -70,8 +73,8 @@ bind = $mainMod SHIFT, P, pin
 # Focus mode toggle (floating <-> tiled)
 bind = $mainMod SHIFT, Space, focuscurrentorlast
 
-# Smart floating (float + center + resize) - equivalent to i3's smart-float.sh
-bind = $mainMod SHIFT, F, exec, hyprctl dispatch togglefloating && hyprctl dispatch centerwindow
+# Smart floating (float + center + resize with optimal size)
+bind = $mainMod SHIFT, F, exec, ~/.config/hypr/scripts/smart-float.sh
 
 # Move window to center
 bind = $mainMod CTRL, C, centerwindow
