--- a/home/dot_config/waybar/configs/vertical-left/config.json
+++ b/home/dot_config/waybar/configs/vertical-left/config.json
@@ -8,7 +8,7 @@
   "margin-bottom": 8,
   "margin-right": 0,
 
-  "modules-left": ["custom/jgmenu", "hyprland/workspaces", "custom/separator"],
+  "modules-left": ["custom/jgmenu", "group/quick-apps", "group/system-apps", "group/power-actions", "hyprland/workspaces", "custom/separator"],
 
   "modules-center": ["clock", "custom/weather"],
 
@@ -29,6 +29,126 @@
     "tooltip-format": "Open Jgmenu",
     "on-click": "dots-jgmenu",
     "on-right-click": "exo-open ~/.config/jgmenu/jgmenurc"
+  },
+
+  "group/quick-apps": {
+    "orientation": "vertical",
+    "drawer": {
+      "transition-duration": 300,
+      "transition-left-to-right": false
+    },
+    "modules": [
+      "custom/quick-apps-header",
+      "custom/apps-web",
+      "custom/apps-terminal",
+      "custom/apps-files"
+    ]
+  },
+
+  "custom/quick-apps-header": {
+    "format": "󰘳",
+    "tooltip": true,
+    "tooltip-format": "Quick Apps\nClick to expand/collapse"
+  },
+
+  "group/system-apps": {
+    "orientation": "vertical",
+    "drawer": {
+      "transition-duration": 300,
+      "transition-left-to-right": false
+    },
+    "modules": [
+      "custom/system-apps-header",
+      "custom/apps-system",
+      "custom/apps-audio"
+    ]
+  },
+
+  "custom/system-apps-header": {
+    "format": "󰒓",
+    "tooltip": true,
+    "tooltip-format": "System Apps\nClick to expand/collapse"
+  },
+
+  "group/power-actions": {
+    "orientation": "vertical",
+    "drawer": {
+      "transition-duration": 300,
+      "transition-left-to-right": false
+    },
+    "modules": [
+      "custom/power-actions-header",
+      "custom/apps-lock",
+      "custom/apps-reboot",
+      "custom/apps-shutdown"
+    ]
+  },
+
+  "custom/power-actions-header": {
+    "format": "󰐥",
+    "tooltip": true,
+    "tooltip-format": "Power Actions\nClick to expand/collapse"
+  },
+
+  "custom/apps-web": {
+    "format": "󰈹",
+    "tooltip": true,
+    "tooltip-format": "Open Web Browser",
+    "on-click": "exo-open --launch WebBrowser"
+  },
+
+  "custom/apps-terminal": {
+    "format": "󰞷",
+    "tooltip": true,
+    "tooltip-format": "Open Terminal",
+    "on-click": "exo-open --launch TerminalEmulator"
+  },
+
+  "custom/apps-files": {
+    "format": "󰉋",
+    "tooltip": true,
+    "tooltip-format": "Open File Manager",
+    "on-click": "exo-open --launch FileManager"
+  },
+
+  "custom/apps-system": {
+    "format": "󰍺",
+    "tooltip": true,
+    "tooltip-format": "Display Settings",
+    "on-click": "~/.local/bin/dots-settings-gui --category display"
+  },
+
+  "custom/apps-audio": {
+    "format": "󰕾",
+    "tooltip": true,
+    "tooltip-format": "Audio Settings (Pavucontrol)",
+    "on-click": "pavucontrol"
+  },
+
+  "custom/apps-lock": {
+    "format": "󰌾",
+    "tooltip": true,
+    "tooltip-format": "Lock Screen",
+    "on-click": "~/.config/hypr/scripts/lock.sh"
+  },
+
+  "custom/apps-reboot": {
+    "format": "󰜉",
+    "tooltip": true,
+    "tooltip-format": "Reboot System",
+    "on-click": "systemctl reboot"
+  },
+
+  "custom/apps-shutdown": {
+    "format": "󰐥",
+    "tooltip": true,
+    "tooltip-format": "Shutdown System",
+    "on-click": "systemctl poweroff"
+  },
+
+  "custom/separator-dot": {
+    "format": "•",
+    "tooltip": false
   },
 
   "hyprland/workspaces": {
