refactor: remove unused autostart entries and enhance keyboard layout management

--- a/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
@@ -43,6 +43,9 @@ bind = $mainMod SHIFT, G, exec, ~/.config/hypr/scripts/gaps-interactive.sh
 # IBus engine switcher (for sgpt)
 bind = $mainMod CTRL, Space, exec, ibus engine shin
 
+# Toggle keyboard layout
+# bind = ALT SHIFT, Space, exec, ~/.local/bin/dots-keyboard-layout --toggle
+
 # ============================================================================
 # Window Management
 # ============================================================================
