--- a/home/dot_config/hypr/hyprland.conf.d/input.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/input.conf
@@ -4,10 +4,10 @@
 
 input {
     # Keyboard
-    kb_layout = us
+    kb_layout = us,latam
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = grp:alt_shift_toggle
     kb_rules =
 
     # Keyboard behavior
