--- a/home/dot_config/hypr/hypridle.conf
+++ b/home/dot_config/hypr/hypridle.conf
@@ -13,7 +13,7 @@ listener {
 
 listener {
   timeout = 600            # 10 min
-  on-timeout = ~/.local/bin/dots-power-menu lock
+  on-timeout = ~/.local/bin/dots-lockscreen --lock
   on-resume = echo "Unlocked"
 }
 
