Refactor documentation and scripts for Hyprland integration
- Updated System Architecture documentation to reflect new export formats and integration with Waybar instead of Polybar.
- Revised Changelog for 2025 to include Hyprland floating window configuration.
- Modified Dots Scripts documentation to clarify fallback chains and primary tools for screenshots and lock screens.
- Removed outdated Hyprland keybindings compatibility documentation and created a comprehensive Hyprland Keybindings reference.
- Adjusted Network Manager documentation to specify Waybar for GUI tray icon management.
- Updated Rice System Theme Management documentation to reflect changes in export formats for Waybar and Hyprland.
- Revised Rofi Apps Launcher documentation to clarify custom keybinding integration in Hyprland.
- Updated Testing documentation to include Hyprland as a supported window manager.
- Adjusted sidebar links to point to the new Hyprland Keybindings documentation.
- Added a new script for post-installation service initialization to ensure proper setup after applying dotfiles.
- Revised EWW integration documentation for Hyprland, including keybinding examples.
- Enhanced Waybar configuration files with tooltips and improved weather and performance scripts for better integration.
- Updated night mode and weather scripts to support detailed output for Waybar tooltips and status icons.

--- a/home/dot_config/waybar/configs/default/config-top.json
+++ b/home/dot_config/waybar/configs/default/config-top.json
@@ -179,7 +179,7 @@
     "format-icons": ["󰃚", "󰃛", "󰃜", "󰃝", "󰃞", "󰃟", "󰃠"],
     "on-scroll-up": "brightnessctl set 5%+",
     "on-scroll-down": "brightnessctl set 5%-",
-    "tooltip-format": "Brightness: {percent}%"
+    "tooltip-format": "Brightness: {percent}%\nDevice: intel_backlight"
   },
 
   "modules-center": [
@@ -266,7 +266,8 @@
     "format": "{}",
     "exec": "~/.config/waybar/scripts/weather",
     "interval": 1800,
-    "tooltip": false
+    "tooltip": true,
+    "exec-tooltip": "~/.config/waybar/scripts/weather --tooltip"
   },
 
   "custom/separator": {
@@ -286,7 +287,7 @@
     "on-click": "pamixer --default-source -t",
     "on-scroll-up": "pamixer --default-source -i 5",
     "on-scroll-down": "pamixer --default-source -d 5",
-    "tooltip-format": "Microphone: {volume}%"
+    "tooltip-format": "{source_desc}\nVolume: {volume}%"
   },
 
   "pulseaudio/slider": {
@@ -330,7 +331,8 @@
   "tray": {
     "icon-size": 18,
     "spacing": 12,
-    "show-passive-items": true
+    "show-passive-items": true,
+    "tooltip": true
   },
 
   "hyprland/window": {
@@ -338,6 +340,8 @@
     "separate-outputs": false,
     "rewrite": {
       "": ""
-    }
+    },
+    "tooltip": true,
+    "tooltip-format": "Active Window: {title}"
   }
 }
