Updated hyprland keybindings

--- a/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
+++ b/home/dot_config/hypr/hyprland.conf.d/keybindings.conf
@@ -267,4 +267,4 @@ bind = $mainMod, period, changegroupactive, f
 bind = $mainMod, comma, changegroupactive, b
 
 # Lock group
-bind = $mainMod SHIFT, G, lockactivegroup, toggle
+bind = $mainMod SHIFT, O, lockactivegroup, toggle
